k8s/grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 1  # Number of Grafana pod replicas
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest  # Replace with the desired Grafana image version
          ports:
            - containerPort: 3000  # Grafana default port
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  type: LoadBalancer  # Exposes Grafana as a LoadBalancer service
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: grafana
