k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: default
  labels:
    app: fastapi-app
spec:
  type: LoadBalancer  # Use LoadBalancer to expose the service externally
  ports:
    - port: 80  # External port
      targetPort: 8000  # Port the FastAPI app listens on
      protocol: TCP
  selector:
    app: fastapi-app  # Selector to match the FastAPI pods
